# ct-viewer

./: .gitignore  README.MD  package-lock.json  package.json
src/: main.js  preload.js
src/addons/test-cpp/: CMakeLists.txt  package-lock.json
src/addons/test-cpp/src/: test.cpp
src/frontend/: .eslintrc  package-lock.json  package.json  webpack.config.js
src/frontend-test/: .eslintrc  package-lock.json  package.json  webpack.config.js
src/frontend-test/src/: index.js  index.pug  index.scss  marching-cubes.worker.js  sculpt.js
src/frontend/src/: actions.js  index.jsx  index.pug  reducers.js  store.js
src/frontend/src/components/CanvasComponent/: canvas-component.jsx
src/frontend/src/components/CaseManagment/: case-managment.jsx
src/frontend/src/components/FilesManagment/: files-managment.jsx
src/frontend/src/components/Sculpting/: sculpting.jsx
src/frontend/src/components/Segmentation/: segmentation.jsx
src/frontend/src/components/ViewsSettings/: views-settings.jsx
src/frontend/src/components/VisibilitySettings/: visibility-settings.jsx
src/frontend/src/js/: present-image.js
src/frontend/src/scss/: base.scss
src/frontend/src/views/ct-main-page/: index.jsx
src/frontend/src/workers/: marching-cubes.worker.js
